# TranscribrAI

./: .gitignore  LICENSE  Plan.md  README.md  config.json  main.py  pyproject.toml  requirements.txt
docs/: gui-design.md
src/: __init__.py  app.py  exceptions.py
src/audio/: __init__.py  recorder.py
src/gui/: __init__.py  main_window.py  tray.py
src/hotkey/: __init__.py  manager.py
src/input/: __init__.py
src/transcription/: __init__.py
transcribrai/: __main__.py  app.py
transcribrai/audio/: __init__.py  devices.py  recorder.py
transcribrai/gui/: __init__.py  main_window.py  settings.py  tray.py
transcribrai/hotkey/: manager.py
transcribrai/input/: terminal.py
transcribrai/transcription/: whisper.py
